[package]

name = "ChatRoom"
version = "0.0.1"
authors = ["keaganr <keaganr@gmail.com>"]

[dependencies.mysql]
git = "https://github.com/blackbeam/rust-mysql-simple.git"
default-features = false

[dependencies.ncurses]
git = "https://github.com/jeaye/ncurses-rs.git"

[dependencies.rustbox]
git = "https://github.com/gchp/rustbox.git"

